--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.9",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
